docs: add docummentation for createOpening
