# handler/createOpening.go
@@ -7,6 +7,19 @@ import (
 	"github.com/hlgboot/gopportunities/schemas"
 )
 
+// @BasePath /api/v1
+
+// Create Opening godoc
+// @Summary Create opening
+// @Description Create a new job opening
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Param request body CreatingOpeningRequest true "Request body"
+// @Success 200 {object} CreateOpeningResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /opening [post]
 func CreateOpeningHandler(ctx *gin.Context) {
 	request := CreatingOpeningRequest{}
 
